Refactored Code and completed REST API swagger docs
