# src/controller/detailController.js
@@ -1,45 +1,6 @@
 const Trades = require("../models/Trades")
-var chalk = require('chalk');
-var success = chalk.bold.green;
-var error = chalk.bold.red;
-const ObjectId = require('mongoose').Types.ObjectId;
-const groupBy = require('lodash/groupBy');
-
-function isValidObjectId(id) {
-
-    if (ObjectId.isValid(id)) {
-        if ((String)(new ObjectId(id)) === id)
-            return true;
-        return false;
-    }
-    return false;
-}
-const getTotalShares = async (tickerSymbol) => {
-    const trades = await Trades.find({ tickerSymbol });
-    let count = 0;
-    trades.map(trade => {
-
-        if (trade.method === "BUY")
-            count += trade.shares;
-        else if (trade.method === "SELL")
-            count -= trade.shares
-    })
-    console.log(count)
-    return count;
-}
-const getTotalBuyShares = async (tickerSymbol) => {
-    const trades = await Trades.find({ tickerSymbol });
-    let count = 0;
-    trades.map(trade => {
-
-        if (trade.method === "BUY")
-            count += trade.shares;
-
-    })
-    console.log(count)
-    return count;
-}
-
+const { logger } = require("../utility/chalkLogger")
+const { getTotalShares, getTotalBuyShares, isValidObjectId } = require("../utility/controllerhelper")
 exports.getReturns = async (req, res) => {
     Trades.find({}, async (err, docs) => {
         if (err) {
@@ -53,7 +14,7 @@ exports.getReturns = async (req, res) => {
             }, {});
 
             result = Object.values(result).map(arr => (arr.length < 1 ? arr[0] : arr));
-
+            //Making Array of Arrays for trades of same ticker symbol
             let portfolio = [];
             let curent_price = 100.00
             for (let i in result) {
@@ -69,10 +30,12 @@ exports.getReturns = async (req, res) => {
                 temp.shares = await getTotalShares(currentStock[0].tickerSymbol);
                 temp.avgBuyPrice = totalPrice / await getTotalBuyShares(currentStock[0].tickerSymbol);
                 portfolio.push(temp)
+                //Cumulating all trades into one object and pushing into one Portfolio
             }
             let returns = 0;
             for (let itr in portfolio) {
                 returns += (curent_price - portfolio[itr].avgBuyPrice) * portfolio[itr].shares;
+                // Calculating total returns
             }
             return res.status(200).json({
                 message: "Assuming current price is always Rs. 100 for any security.",
@@ -97,7 +60,7 @@ exports.getTrades = async (req, res) => {
             }, {});
 
 
-
+            //Making Array of Arrays for trades of same ticker symbol
             return res.status(200).send(result)
 
         }
@@ -116,6 +79,7 @@ exports.getPortfolio = async (req, res) => {
                 return acc;
             }, {});
             result = Object.values(result).map(arr => (arr.length < 1 ? arr[0] : arr));
+            //Making Array of Arrays for trades of same ticker symbol
             let portfolio = [];
             for (let i in result) {
                 let temp = {}
@@ -130,6 +94,7 @@ exports.getPortfolio = async (req, res) => {
                 temp.shares = await getTotalShares(currentStock[0].tickerSymbol);
                 temp.avgBuyPrice = totalPrice / await getTotalBuyShares(currentStock[0].tickerSymbol);
                 portfolio.push(temp)
+                //Cumulating all trades into one object and pushing into one Portfolio
             }
             return res.status(200).send(portfolio)
         }
