# src/routes/tradeRoutes.js
@@ -4,8 +4,8 @@ const tradeController = require("../controller/tradeController")
 const validator = require('express-joi-validation').createValidator({})
 const valid = require("../validators/validator")
 
-router.post('/update-trade/:id', validator.body(valid), tradeController.updateTrade)
-router.post('/remove-trades/:id', tradeController.removeTrade)
+router.post('/update-trade', validator.body(valid), tradeController.updateTrade)
+router.post('/remove-trades', tradeController.removeTrade)
 router.post('/add-trade', validator.body(valid), tradeController.addTrade)
 
 module.exports = router
